# starvote

./: LICENSE  README.md  example.py  pyproject.toml  tail
docs/: clarifying_star_voting.md  formatting_fractions_in_columns_of_text.txt
sample_polls/: README.md  sample_poll_automatic_runoff_breakable_tie.csv  sample_poll_automatic_runoff_breakable_tie.result.txt  sample_poll_automatic_runoff_unbreakable_tie.csv  sample_poll_automatic_runoff_unbreakable_tie.result.txt  sample_poll_proportional_star_3_seats_breakable_tie.csv  sample_poll_proportional_star_3_seats_breakable_tie.result.txt  sample_poll_proportional_star_3_seats_unbreakable_tie.csv  sample_poll_proportional_star_3_seats_unbreakable_tie.result.txt  sample_poll_reweighted_range_3_seats_max-score_10.csv  sample_poll_reweighted_range_3_seats_max-score_10.result.txt  sample_poll_score_round_breakable_tie_between_second_and_third.csv  sample_poll_score_round_breakable_tie_between_second_and_third.result.txt  sample_poll_score_round_unbreakable_three_way_tie_for_first.result.txt  sample_poll_score_round_unbreakable_three_way_tie_for_second.csv  sample_poll_score_round_unbreakable_three_way_tie_for_second.result.txt  sample_poll_score_round_unbreakable_tie_between_second_and_third.csv  sample_poll_score_round_unbreakable_tie_between_second_and_third.result.txt  starvote_ballots_2020_democratic_presidential_primary.result.txt  starvote_ballots_2020_libertarian_party_presidential_nomination.csv  starvote_ballots_2020_libertarian_party_presidential_nomination.result.txt  starvote_ballots_4tyx27ks_20230520050434.result.txt  (+16 more)
tools/: is_ok  (+1 more)
(+187 files in other folders)
