[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "starvote"
authors = [
    {name = "Larry Hastings", email = "larry@hastings.org"},
    ]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    ]
dynamic = [
    'version',
    'description',
    ]

[project.urls]
Source = "https://github.com/larryhastings/starvote/"


[project.optional-dependencies]
reference = [
    "numpy",
    "pandas",
    ]
