[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "starvote"
authors = [
    {name = "Larry Hastings", email = "larry@hastings.org"},
    ]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
dynamic = [
    'version',
    'description',
    ]

[project.urls]
Source = "https://github.com/larryhastings/starvote/"


[project.optional-dependencies]
reference = [
    "numpy",
    "pandas",
    ]
